force-app/main/default/objects/SF_Training_Topic__c/fields/Instructor__c.field-meta.xml
<CustomField>
    <fullName>Instructor__c</fullName>
    <label>Instructor</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gajendra</fullName>
            </value>
            <value>
                <fullName>Mohammad</fullName>
            </value>
            <value>
                <fullName>Meena</fullName>
            </value>
            <value>
                <fullName>Rajesh</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>